welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:20: error: not found: value faceMur
  while(!faceMur) {
         ^