welcome.lessons.welcome.summative.Moria.scala.code
def deplaceRocher() {
  prendBiscuit()
  
  retourne()
  
  while (!estSurBiscuit()) {
    avance()
  }
  
  recule()
  
  poseBiscuit()
  
  retourne()
}

def run() {
  retourne()
  
  while(!faceMur) {
    avance()
    
    if (estSurBiscuit())
    	deplaceRocher()
  }
}

run()